@@ -18,6 +18,14 @@ along with the GNU MP Library; see the file COPYING.LIB.  If not, write to
 the Free Software Foundation, Inc., 59 Temple Place - Suite 330, Boston,
 MA 02111-1307, USA.
 
+2003-08-16  Torbjorn Granlund  <tege@swox.com>
+
+	* configure.in (amd64): New.
+
+	* mpn/amd64/gmp-mparam.h: New file.
+
+	* tune/amd64.asm: New file.
+
 2003-08-15  Kevin Ryde  <kevin@swox.se>
 
 	* tune/freq.c (freq_irix_hinv): Reinstate, for the benefit of IRIX 6.2.
